--- a/addons/modelization_checking/plugin.cfg
+++ b/addons/modelization_checking/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
 name="Modelization Checking"
-description="Adds to the editor a pannel to visualize an Entity Relationship Diagram."
+description="Adds to the editor a pannel to visualize an Entity Relationship Table."
 author="kalharko"
 version="0.0.1"
 script="modelization_checking.gd"
