:sparkles: modelization plugin data structure, hover and click features

--- a/addons/modelization_checking/plugin.cfg
+++ b/addons/modelization_checking/plugin.cfg
@@ -3,5 +3,5 @@
 name="Modelization Checking"
 description="Adds to the editor a pannel to visualize an Entity Relationship Table."
 author="kalharko"
-version="0.0.1"
-script="modelization_checking.gd"
+version="0.1.1"
+script="scripts/modelization_checking.gd"
